# renju-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
renju/: base.py  board.py  check_forbid.py
tests/: test_board.py  test_rules.py
