[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renju"
version = "0.1.0"
description = "A Python library for the game board of Renju/Gomoku with referee rules, symmetries, and SGF support."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Tianyi Hao", email = "haotianyi0@126.com" }
]
keywords = ["renju", "gomoku", "board-game", "referee", "symmetry", "sgf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wind23/renju-python"
